--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap");
 
+* {
+  scroll-behavior: smooth !important;
+}
+
 body {
   background: #f2f2f2;
   font-family: "Poppins", sans-serif;
